injectable/tests/ui/multiple_constructors.stderr
error: cannot find attribute `injectable` in this scope
 --> tests/ui/multiple_constructors.rs
  |
  | #[injectable]
  |   ^^^^^^^^^^
  |
  = note: `injectable` is in scope, but it is a crate, not an attribute
